--- a/config/couchdb.yml
+++ b/config/couchdb.yml
@@ -2,8 +2,8 @@ development: &development
   protocol: 'http'
   host: localhost
   port: 5984
-  prefix: npp_mobile_payments_apis
-  suffix: development
+  prefix:
+  suffix:
   username:
   password:
 
@@ -15,7 +15,7 @@ production:
   protocol: 'https'
   host: localhost
   port: 5984
-  prefix: npp_mobile_payments_apis
-  suffix: production
+  prefix:
+  suffix:
   username: root
   password: 123
